fix: enhance table and modal styles for improved layout and readability

--- a/resources/css/components/table.css
+++ b/resources/css/components/table.css
@@ -7,9 +7,9 @@
 }
 
 .th {
-    @apply py-2 px-4 border-b;
+    @apply py-2 px-4 border-b whitespace-nowrap;
 }
 
 .td {
-    @apply px-4 py-2 border-b;
+    @apply px-4 py-2 border-b whitespace-nowrap;
 }
